Added logic for elastic, renamed some classes

--- a/rest-api/src/.env
+++ b/rest-api/src/.env
@@ -4,4 +4,5 @@ MEMCACHED_URL=localhost:11211
 MONGO_DB=api-db
 MONGO_COLLECTION=rooms
 ELASTICSEARCH_INDEX=rooms
-ROOMS_COLLECTIONS=rooms
+ROOMS_COLLECTION=rooms
+USERS_COLLECTION=users
