--- a/rest-api/src/requirements.txt
+++ b/rest-api/src/requirements.txt
@@ -30,6 +30,7 @@ pymongo==4.5.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 PyYAML==6.0.1
+requests==2.31.0
 six==1.16.0
 sniffio==1.3.0
 starlette==0.27.0
